name:                jsondirtree
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/jsondirtree#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
category:            Web
build-type:          Simple
cabal-version:       >=1.24
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     JsonDirTree
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , bytestring
                     , directory
                     , data-msgpack
                     , filepath
                     , text

source-repository head
  type:     git
  location: https://github.com/stla/jsondirtree
