name:                jsondirtree
version:             0.1.0.0
description:         JSON and tree representations of a folder
homepage:            https://github.com/stla/jsondirtree#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2017 Stéphane Laurent
build-type:          Simple
cabal-version:       >=1.24
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     JsonDirTree
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , text
                     , containers
                     , pretty-tree

source-repository head
  type:     git
  location: https://github.com/stla/jsondirtree
